--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Custom triangle clip path for nav */
+/* .clip-triangle-left {
+  clip-path: polygon(30px 0%, 0% 50%, 30px 100%, 100% 100%, 100% 0%);
+} */
