--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,7 @@ body {
 .font-roboto {
   font-family: 'Roboto', sans-serif;
 }
+
+ .clip-triangle-left {
+  clip-path: polygon(30px 0%, 0% 50%, 30px 100%, 100% 100%, 100% 0%);
+} 
