--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,3 +45,17 @@ body {
  .clip-triangle-left {
   clip-path: polygon(30px 0%, 0% 50%, 30px 100%, 100% 100%, 100% 0%);
 } 
+
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.scroll-animation {
+  animation: scroll 40s linear infinite;
+}
