--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,11 @@ body {
 .scroll-animation {
   animation: scroll 40s linear infinite;
 }
+  
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
