change in exellence page patient care  contatc Us by jaya

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Jaldi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+
 
 
 :root {
@@ -66,4 +68,7 @@ body {
 .scrollbar-hide {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+.font-alata {
+  font-family: 'Alata', sans-serif;
 }
